<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:theme="@style/MyCoolStyle">
        <TableLayout android:layout_width="match_parent" android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/radioButtons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.core.widget.NestedScrollView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/layoutList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>
                </androidx.core.widget.NestedScrollView>
            </TableRow>
        </TableLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ok"
            app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cancel"
            app:layout_constraintStart_toEndOf="@+id/buttonOk"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"/>
        <RadioGroup
            android:id="@+id/radioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCancel">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMaterialBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material_black"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMaterialRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material_red"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMaterialDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material_default"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMaterialBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material_blue"/>
        </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>